# OTKV_Store

./: .gitignore  Dockerfile  Makefile  README.md  benchmark.py  benchmark_and_plot.py  docker-compose.yml  kv_store.py  kv_store.rs  main.py  old_benchmark.py  requirements.txt  test_kvs.py  todo.txt
Python/: .gitignore  Dockerfile  README.md  benchmark.py  main.py  requirements.txt
Python/kv_store/: delete_key.py  endpoints.py  get_value.py  logger.py
Rust/: cargo.toml
Rust/src/: delete_key.rs  endpoints.rs  get_value.rs  kv_store.rs  lock_manager.rs  logger.rs  main.rs  set_value.rs
kv_store/: Cargo.toml  app.py  base.py  control.py  datalet.py  delete_key.py  endpoint.py  get_value.py  kv_store.py  lock_manager.py  logger.py  set_value.py  trie_kv_store.py
kv_store/src/: delete_key.py  get_value.py  kv_store.py  kv_store.rs  lock_manager.py  logger.py  main.rs  set_value.py  trie_kv_store.py
