[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
hashring = "0.3.6"
redis = "0.25.0" 
pyo3-ffi = "0.23.1"
dashmap = "5.0"

[dependencies.pyo3]
version = "0.23.1"
features = ["auto-initialize"]
